fix: fixed logo colors and spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,8 +51,8 @@ body {
 .gradient-bg {
 	background: linear-gradient(
 		55.21deg,
-		#000000 -21.93%,
-		rgba(0, 0, 0, 0) 73.01%
+		#000000 -31.93%,
+		rgba(0, 0, 0, 0) 53.01%
 	);
 }
 
